--- a/src/views/components/SearchListWrap/style.scss
+++ b/src/views/components/SearchListWrap/style.scss
@@ -1,7 +1,21 @@
 [SearchListWrap]{
+
     >.list-cont{
         [ListItem]{
             margin-bottom: 20px;
         }
+    }
+
+    [Loading]{
+        // position: fixed;
+        // left:0;
+        // top:0;
+        // z-index: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width:100%;
+        height: 60vh;
+        // background-color: rgba(0,0,0,0.3);
     }
 }
