observable하도록 구현 연습중

--- a/src/views/components/common/Loading/style.scss
+++ b/src/views/components/common/Loading/style.scss
@@ -1,4 +1,4 @@
-[Loading]{
+[data-component="Loading"]{
     $rotation-animation-speed: 2s;
     $rotation-animation-easing: linear;
     $stroke-animation-speed: 1.5s;
