--- a/src/views/components/ListItem/style.scss
+++ b/src/views/components/ListItem/style.scss
@@ -53,7 +53,15 @@
         button{
             width: 80px;
             height: 40px;
-            background-color: map-get($indigoNatural, 150);
+            background-color: map-get($indigoNatural, 100);
+
+            &:hover{
+                background: map-get($indigoNatural, 80);
+            }
+    
+            &:active{
+                background: map-get($indigoNatural, 150);
+            }
         }
     }
 }
