선택자 변경

--- a/src/views/components/SearchListWrap/style.scss
+++ b/src/views/components/SearchListWrap/style.scss
@@ -1,12 +1,12 @@
-[SearchListWrap]{
+[data-component="SearchListWrap"]{
 
     >.list-cont{
-        [ListItem]{
+        [data-component="ListItem"]{
             margin-bottom: 20px;
         }
     }
 
-    [Loading]{
+    [data-component="Loading"]{
         // position: fixed;
         // left:0;
         // top:0;
