--- a/src/views/components/ListItem/style.scss
+++ b/src/views/components/ListItem/style.scss
@@ -1,4 +1,4 @@
-[ListItem]{
+[data-component="ListItem"]{
     position: relative;
     padding: 12px;
     padding-right: 120px;
@@ -13,7 +13,7 @@
             width: 100%;
             
 
-            [LabelItem]{
+            [data-component="LabelItem"]{
                 &:not(:last-child){
                     &::after{
                         content:"";
