--- a/src/views/components/common/Loading/style.scss
+++ b/src/views/components/common/Loading/style.scss
@@ -1,4 +1,4 @@
-[Loading]{
+[data-component="Loading"]{
     $rotation-animation-speed: 2s;
     $rotation-animation-easing: linear;
     $stroke-animation-speed: 1.5s;
@@ -50,8 +50,8 @@
      }
 }
 
-[AllLoading]{
-    [Loading]{
+[data-component="AllLoading"]{
+    [data-component="Loading"]{
         position: fixed;
         top:0;
         left:0;
